# Prazak

./: .gitignore  Cargo.toml  README.md
graph/: Cargo.toml
graph/src/: graph.rs  graph_fs.rs  lib.rs
graph/tests/: graph_fs_tests.rs
graph_maker/: Cargo.toml
graph_maker/src/: main.rs
verze1/: Cargo.toml
verze1/src/: lib.rs  main.rs
verze2/: Cargo.toml
verze2/src/: approx_graph.rs  main.rs
verze3/: Cargo.toml  graphs_in
verze3/src/: approx_graph.rs  error.rs  main.rs
verze4/: Cargo.toml
verze4_master/: Cargo.toml  master_config.json
verze4_master/src/: approx_graph.rs  main.rs
verze4_slave/: Cargo.toml
verze4_slave/src/: main.rs
