[package]
name = "graph"
version = "0.1.0"
edition = "2021"
description = "a simple graph library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OndrejHana/Prazak"
readme = "../README.md"
authors = ["Ondrej Hana"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

